added week 3's project, practicing css by designing puppy lovers page

--- a/Phase 1/Programs/apples-website.html
+++ b/Phase 1/Programs/apples-website.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Apple Website Terms of Use</title>
   </head>
-  <link>
+  <h1></h1>
     <h1>Apple Website Terms of Use</h1>
     <p>Legal Information & Notices</p>
     <br>
@@ -42,13 +42,14 @@
         
     </ul>
 
+
     <p>Each of these policies may be changed from time to time and are effective immediately upon posting such changes on the Site.</p>
 
     <h2>Feedback and Information</h2>
     <p>Any feedback you provide at this site shall be deemed to be non-confidential. Apple shall be free to use such information on an unrestricted basis.</p>
 
     <p>The information contained in this web site is subject to change without notice.<br>
-Copyright © 1997-2009 Apple Inc. All rights reserved.
+Copyright &copy; 1997-2009 Apple Inc. All rights reserved.
 Apple Inc., One Apple Park Way, Cupertino, CA 95014, USA.</p>
 
 <p>Updated by The Apple Legal Team on Nov. 20, 2009</p>
