--- a/Phase 1/Week-2/FirstProject/imagepractice.html
+++ b/Phase 1/Week-2/FirstProject/imagepractice.html
@@ -7,10 +7,11 @@
   </head>
   <header>
     <h1>My First HTML Document</h1>
+  </header>
+  <body>
     <h2>First Image</h2>
     <img src="images/imageOne.jpg" alt="Image One" />
     <h2>Second Image</h2>
     <img src="images/imageTwo.jpg" alt="Image Two" />
-  </header>
-  <body></body>
+  </body>
 </html>
