add style for navigation

--- a/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
+++ b/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
@@ -7,17 +7,19 @@
     <title>Apple Website</title>
   </head>
   <body>
-    <header>
-      <ul>
-        <li>
-          <link rel="stylesheet" href="images/icons/logo.png" />
-        </li>
-        <li><a href="">Mac</a></li>
-        <li><a href="">iPhone</a></li>
-        <li><a href="">ipad</a></li>
-        <li><a href="">watch</a></li>
-        <li><a href="">tv</a></li>
-      </ul>
-    </header>
+    <div class="nav-container">
+      <header class="header-conrainer">
+        <ul>
+          <li class="apple-logo">
+            <a href="images/icons/logo.png"></a>
+          </li>
+          <li><a href="">Mac</a></li>
+          <li><a href="">iPhone</a></li>
+          <li><a href="">ipad</a></li>
+          <li><a href="">watch</a></li>
+          <li><a href="">tv</a></li>
+        </ul>
+      </header>
+    </div>
   </body>
 </html>
