--- a/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
+++ b/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
@@ -20,6 +20,19 @@
           <li><a href="">tv</a></li>
         </ul>
       </header>
+
+      <section>
+        <div>
+          <div>16-inch model</div>
+          <div>MacBook Pro</div>
+          <div>The best for the brightest</div>
+          <ul>
+            <li><a href="">Learn more ></a></li>
+            <li><a href="">Buy ></a></li>
+          </ul>
+          <div><img src="images/home/mac-laptop.jpg" alt="apple-laptop" /></div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
