--- a/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
+++ b/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
@@ -21,12 +21,12 @@
         </ul>
       </header>
 
-      <section>
-        <div>
-          <div>16-inch model</div>
-          <div>MacBook Pro</div>
-          <div>The best for the brightest</div>
-          <ul>
+      <section class="hero-section">
+        <div class="hero-div">
+          <div class="inch-model">16-inch model</div>
+          <div class="macbook">MacBook Pro</div>
+          <div class="brightest">The best for the brightest</div>
+          <ul class="two-links">
             <li><a href="">Learn more ></a></li>
             <li><a href="">Buy ></a></li>
           </ul>
