--- a/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
+++ b/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
@@ -3,6 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Link to the Font-Awesome Font -->
+    <!-- This font gives us the option to use emojies, symbols, common logos and icons as a font -->
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css"
+    />
+
+    <!-- Link to Montserrat font on Google Fonts-->
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat:200,200i,300,300i,400,600,600i,700,700i,800,800i,900,900i&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="CSS/style.css" />
     <title>Apple Website</title>
   </head>
@@ -31,6 +43,20 @@
             <li><a href="">Buy ></a></li>
           </ul>
           <div><img src="images/home/mac-laptop.jpg" alt="apple-laptop" /></div>
+        </div>
+      </section>
+      <section class="iphone11-pro-bg">
+        <div class="iphone11-pro-bg">
+          <img src="images/home/iphone11-pro-bg.jpg" alt="iphone11-pro-bg" />
+        </div>
+        <div class="fixed-content">
+          <div class="iphone-11">iphone 11 pro</div>
+          <div class="the-pros">Pro cameras. Pro display. Pro performance.</div>
+          <div class="currency">From $24.95/mo. or $599 with trade‑in.</div>
+          <div class="two-links pro-links">
+            <li><a href="">Learn more ></a></li>
+            <li><a href="">Buy ></a></li>
+          </div>
         </div>
       </section>
     </div>
