add the 3rd tab the iphone-11 display structure

--- a/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
+++ b/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
@@ -53,11 +53,25 @@
           <div class="iphone-11">iphone 11 pro</div>
           <div class="the-pros">Pro cameras. Pro display. Pro performance.</div>
           <div class="currency">From $24.95/mo. or $599 with trade‑in.</div>
-          <div class="two-links pro-links">
+          <div class="two-links">
             <li><a href="">Learn more ></a></li>
             <li><a href="">Buy ></a></li>
           </div>
         </div>
+        <section>
+          <div class="iphone11-pro-bg">
+            <img src="images/home/iphone11-bg.jpg" alt="iphone11-bg" />
+          </div>
+          <div class="second-fixed-container">
+            <div class="iphone-11-2">iphone 11</div>
+            <div class="the-right">Just the right amount of everything.</div>
+            <div class="currencies">From $16.62/mo. or $399 with trade‑in.</div>
+            <div class="two-links">
+              <li><a href="">Learn more ></a></li>
+              <li><a href="">Buy ></a></li>
+            </div>
+          </div>
+        </section>
       </section>
     </div>
   </body>
