added style for the 3rd tab

--- a/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
+++ b/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
@@ -54,12 +54,14 @@
           <div class="the-pros">Pro cameras. Pro display. Pro performance.</div>
           <div class="currency">From $24.95/mo. or $599 with trade‑in.</div>
           <div class="two-links">
-            <li><a href="">Learn more ></a></li>
-            <li><a href="">Buy ></a></li>
+            <div class="pro-links">
+              <li><a href="">Learn more ></a></li>
+              <li><a href="">Buy ></a></li>
+            </div>
           </div>
         </div>
-        <section>
-          <div class="iphone11-pro-bg">
+        <section class="iphone11-pro-container">
+          <div class="iphone11-pro">
             <img src="images/home/iphone11-bg.jpg" alt="iphone11-bg" />
           </div>
           <div class="second-fixed-container">
@@ -67,8 +69,10 @@
             <div class="the-right">Just the right amount of everything.</div>
             <div class="currencies">From $16.62/mo. or $399 with trade‑in.</div>
             <div class="two-links">
-              <li><a href="">Learn more ></a></li>
-              <li><a href="">Buy ></a></li>
+              <div class="thired-link">
+                <li><a href="">Learn more ></a></li>
+                <li><a href="">Buy ></a></li>
+              </div>
             </div>
           </div>
         </section>
