added aditional page for watch and card display

--- a/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
+++ b/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
@@ -76,6 +76,56 @@
             </div>
           </div>
         </section>
+        <section>
+          <div>
+            <div class="watch-and-card">
+              <img src="images/home/watch-series-5.jpg" alt="watch-series-5" />
+              <img src="images/home/apple-card.jpg" alt="apple-card" />
+            </div>
+
+            <div class="on-watch-pharagraph">
+              <div class="watch-series5-logo">
+                <img
+                  src="images/icons/watch-series5-logo.png"
+                  alt="watch-series5-logo"
+                />
+              </div>
+              <div class="watch-series-text">
+                <div class="retinal-display">
+                  With the new Always-On Retina display.
+                </div>
+
+                <div class="watch-prom"><p>You’ve never seen a watch like this.</p></div
+              </div>
+              <div class="two-links">
+                <div class="watch-link">
+                  <li><a href="">Learn more ></a></li>
+                  <li><a href="">Buy ></a></li>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="on-card-pharagraph">
+            <div class="apple-card-logo">
+              <div>
+                <img
+                  src="images/icons/apple-card-logo.png"
+                  alt="apple-card-logo"
+                />
+              </div>
+              <div class="retinal-display">
+                Get 3% Daily Cash on purchases from Apple using Apple Card.
+              </div>
+            </div>
+            <div class="two-links">
+              <div class="card-link">
+                <li><a href="">Learn more ></a></li>
+                <li><a href="">Buy ></a></li>
+              </div>
+            </div>
+          </div>
+        </section>
       </section>
     </div>
   </body>
