added a style for the apple card page

--- a/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
+++ b/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
@@ -108,15 +108,16 @@
 
           <div class="on-card-pharagraph">
             <div class="apple-card-logo">
-              <div>
                 <img
                   src="images/icons/apple-card-logo.png"
                   alt="apple-card-logo"
                 />
               </div>
-              <div class="retinal-display">
-                Get 3% Daily Cash on purchases from Apple using Apple Card.
+              <div class="card-text">
+                              <div class="retinal-display">
+                Get 3% Daily Cash on purchases from
               </div>
+              <div class="apple-card">Apple using Apple Card.</div>
             </div>
             <div class="two-links">
               <div class="card-link">
@@ -124,6 +125,7 @@
                 <li><a href="">Buy ></a></li>
               </div>
             </div>
+              </div>
           </div>
         </section>
       </section>
