added style for apple tv and airpodes section

--- a/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
+++ b/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
@@ -130,16 +130,17 @@
         </section>
 
 
-        <section class="tv-and-airpods-conatiner">
+        <!-- <section class="tv-and-airpods-conatiner">
           <div class="apple-tv-logo">
             <img src="images/icons/apple-tv-logo.png" alt="apple-tv-logo">
           </div>
+
           <div class="tv-and-airpods-image">
             <div class="tv-image">
-              <img src="images/home/apple-tv-background.jpg" alt="apple-tv-background">
+                <img src="images/home/apple-tv-background.jpg" alt="apple-tv-background">
             </div>
             <div class="airpods-image">
-              <img src="images/home/air-pods.jpg" alt="air-pods">
+                <img src="images/home/air-pods.jpg" alt="air-pods">
             </div>
           </div>
           <div class="tv-and-airpods-text">
@@ -155,7 +156,35 @@
                 <li><a href="">Buy ></a></li>
               </div>
             </div>
+        </section> -->
+
+
+
+        <section class="tv-and-airpods-conatiner">
+          <div class="apple-tv-logo">
+            <img src="images/icons/apple-tv-logo.png" alt="apple-tv-logo">
+          </div>
+
+          <div class="tv-and-airpods-image">
+            <img src="images/home/apple-tv-background.jpg" alt="apple-tv-background">
+            <img src="images/home/air-pods.jpg" alt="air-pods">
+          </div>
+          <div class="tv-and-airpods-text">
+            <img src="images/icons/servant-logo.png" alt="servant-logo">
+          </div>
+          <div class="airpods-text">
+            <div>AirPods Pro</div>
+            <div>Magic like you’ve never heard.</div>
+          </div>
+          <div class="two-links">
+              <div class="airpods-link">
+                <li><a href="">Learn more ></a></li>
+                <li><a href="">Buy ></a></li>
+              </div>
+            </div>
         </section>
+
+
       </section>
     </div>
   </body>
