added code and structure for macbook pro and ipad tab

--- a/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
+++ b/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
@@ -128,43 +128,15 @@
               </div>
           </div>
         </section>
-
-
-        <!-- <section class="tv-and-airpods-conatiner">
-          <div class="apple-tv-logo">
-            <img src="images/icons/apple-tv-logo.png" alt="apple-tv-logo">
-          </div>
-
-          <div class="tv-and-airpods-image">
-            <div class="tv-image">
-                <img src="images/home/apple-tv-background.jpg" alt="apple-tv-background">
-            </div>
-            <div class="airpods-image">
-                <img src="images/home/air-pods.jpg" alt="air-pods">
-            </div>
-          </div>
-          <div class="tv-and-airpods-text">
-            <img src="images/icons/servant-logo.png" alt="servant-logo">
-          </div>
-          <div class="airpods-text">
-            <div>AirPods Pro</div>
-            <div>Magic like you’ve never heard.</div>
-          </div>
-          <div class="two-links">
-              <div class="card-link">
-                <li><a href="">Learn more ></a></li>
-                <li><a href="">Buy ></a></li>
-              </div>
-            </div>
-        </section> -->
-
-
+        
 
         <section class="tv-and-airpods-conatiner">
           <div class="apple-tv-logo">
             <img src="images/icons/apple-tv-logo.png" alt="apple-tv-logo">
           </div>
-
+          <div class="link-on-apple-tv">
+            <a href="">Watch the trailer</a>
+          </div>
           <div class="tv-and-airpods-image">
             <img src="images/home/apple-tv-background.jpg" alt="apple-tv-background">
             <img src="images/home/air-pods.jpg" alt="air-pods">
@@ -185,6 +157,33 @@
         </section>
 
 
+        <div class="fghjnkmb">
+                <section class="hero-section">
+        <div class="hero-div">
+          <div class="inch-model">16-inch model</div>
+          <div class="macbook">MacBook Pro</div>
+          <div class="brightest">The best for the brightest</div>
+          <ul class="two-links">
+            <li><a href="">Learn more ></a></li>
+            <li><a href="">Buy ></a></li>
+          </ul>
+          <div><img src="images/home/mac-laptop.jpg" alt="apple-laptop" /></div>
+        </div>
+      </section>
+
+            <section class="hero-section">
+        <div class="hero-div">
+          <div class="inch-model">16-inch model</div>
+          <div class="macbook">MacBook Pro</div>
+          <div class="brightest">The best for the brightest</div>
+          <ul class="two-links">
+            <li><a href="">Learn more ></a></li>
+            <li><a href="">Buy ></a></li>
+          </ul>
+          <div><img src="images/home/mac-laptop.jpg" alt="apple-laptop" /></div>
+        </div>
+      </section>
+        </div>
       </section>
     </div>
   </body>
