added perfecting style to puppy lovers page

--- a/Phase 1/Week-3/PuppyProject/Project/index.html
+++ b/Phase 1/Week-3/PuppyProject/Project/index.html
@@ -13,16 +13,16 @@
     <title>Puppy Lovers Page</title>
   </head>
   <body>
-    <section class="header">
+    <header class="header">
       <h1>Puppy Lovers Page</h1>
-    </section>
+    </header>
 
     <section class="banner-puppies">
       <img src="images/banner-puppies.jpg" alt="banner-puppies" />
     </section>
 
-    <div class="container">
-      <section class="three-container">
+    <section class="container">
+      <div class="three-container">
         <div class="three-puppies">
           <div class="puppy-1">
             <img src="images/puppy-1.jpg" alt="puppy-1" />
@@ -36,29 +36,25 @@
             <img src="images/puppy-2.jpg" alt="puppy-2" />
           </div>
         </div>
-      </section>
-    </div>
+      </div>
+    </section>
 
-    <div class="second-container">
-      <section class="more-puppies">
+    <section class="second-container">
+      <div class="more-puppies">
         <div class="more-puppies-pharagrapgh">
           <p>More Puppies</p>
         </div>
-      </section>
+      </div>
 
       <section class="two-puppies">
-        <div class="puppy-3">
-          <img src="images/puppy-3.jpg" alt="puppy-3" />
-        </div>
+        <img src="images/puppy-3.jpg" alt="puppy-3" />
 
-        <div class="puppy-4">
-          <img src="images/puppy-4.jpg" alt="puppy-4" />
-        </div>
+        <img src="images/puppy-4.jpg" alt="puppy-4" />
       </section>
-    </div>
+    </section>
 
     <section class="fotter">
-      <p>Developed by Nezira Worku</p>
+      <p>Developed by Nezira</p>
     </section>
   </body>
 </html>
