refined the html structure, the navigation bar style and color theme

--- a/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
+++ b/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
@@ -19,20 +19,29 @@
     <title>Apple Website</title>
   </head>
   <body>
-    <div class="nav-container">
+
+    <!--nav bar starts here-->
       <header class="header-conrainer">
-        <ul>
           <li class="apple-logo">
-            <a href="images/icons/logo.png"></a>
+            <img src="images/icons/logo.png" alt="apple-logo">
           </li>
           <li><a href="">Mac</a></li>
           <li><a href="">iPhone</a></li>
           <li><a href="">ipad</a></li>
           <li><a href="">watch</a></li>
           <li><a href="">tv</a></li>
+          <li><a href="">Music</a></li>
+          <li><a href="">Support</a></li>
+          <li class="search-icon">
+            <img src="images/icons/search-icon.png" alt="search-icon">
+          </li>
+          <li class="cart-icon">
+            <img src="images/icons/cart.png" alt="cart-icon">
+          </li>
         </ul>
       </header>
 
+      <!--hero-section starts here-->
       <section class="hero-section">
         <div class="hero-div">
           <div class="inch-model">16-inch model</div>
@@ -45,6 +54,8 @@
           <div><img src="images/home/mac-laptop.jpg" alt="apple-laptop" /></div>
         </div>
       </section>
+
+      <!--iphone 11 pro starts here-->
       <section class="iphone11-pro-bg">
         <div class="iphone11-pro-bg">
           <img src="images/home/iphone11-pro-bg.jpg" alt="iphone11-pro-bg" />
@@ -60,129 +71,112 @@
             </div>
           </div>
         </div>
-        <section class="iphone11-pro-container">
-          <div class="iphone11-pro">
-            <img src="images/home/iphone11-bg.jpg" alt="iphone11-bg" />
+      </section>
+
+      <!--iphone 11 section starts here-->
+      <section class="iphone11-pro-container">
+        <div class="iphone11-pro">
+          <img src="images/home/iphone11-bg.jpg" alt="iphone11-bg" />
+        </div>
+        <div class="second-fixed-container">
+          <div class="iphone-11-2">iphone 11</div>
+          <div class="the-right">Just the right amount of everything.</div>
+          <div class="currencies">From $16.62/mo. or $399 with trade‑in.</div>
+          <div class="two-links">
+            <div class="thired-link">
+              <li><a href="">Learn more ></a></li>
+              <li><a href="">Buy ></a></li>
+            </div>
           </div>
-          <div class="second-fixed-container">
-            <div class="iphone-11-2">iphone 11</div>
-            <div class="the-right">Just the right amount of everything.</div>
-            <div class="currencies">From $16.62/mo. or $399 with trade‑in.</div>
+        </div>
+      </section>
+
+      <!--apple watch and card section starts here-->
+      <section>
+        <div>
+          <!--apple watch division starts here-->
+          <div class="watch-and-card">
+            <img src="images/home/watch-series-5.jpg" alt="watch-series-5" />
+            <img src="images/home/apple-card.jpg" alt="apple-card" />
+          </div>
+
+          <div class="on-watch-pharagraph">
+            <div class="watch-series5-logo">
+              <img
+                src="images/icons/watch-series5-logo.png"
+                alt="watch-series5-logo"
+              />
+            </div>
+            <div class="watch-series-text">
+              <div class="retinal-display">
+                With the new Always-On Retina display.
+              </div>
+
+              <div class="watch-prom"><p>You’ve never seen a watch like this.</p></div
+            </div>
             <div class="two-links">
-              <div class="thired-link">
+              <div class="watch-link">
                 <li><a href="">Learn more ></a></li>
                 <li><a href="">Buy ></a></li>
               </div>
             </div>
           </div>
-        </section>
-        <section>
-          <div>
-            <div class="watch-and-card">
-              <img src="images/home/watch-series-5.jpg" alt="watch-series-5" />
-              <img src="images/home/apple-card.jpg" alt="apple-card" />
-            </div>
+        </div>
 
-            <div class="on-watch-pharagraph">
-              <div class="watch-series5-logo">
-                <img
-                  src="images/icons/watch-series5-logo.png"
-                  alt="watch-series5-logo"
-                />
-              </div>
-              <div class="watch-series-text">
-                <div class="retinal-display">
-                  With the new Always-On Retina display.
-                </div>
-
-                <div class="watch-prom"><p>You’ve never seen a watch like this.</p></div
-              </div>
-              <div class="two-links">
-                <div class="watch-link">
-                  <li><a href="">Learn more ></a></li>
-                  <li><a href="">Buy ></a></li>
-                </div>
-              </div>
+        <!--apple card division starts here-->
+        <div class="on-card-pharagraph">
+          <div class="apple-card-logo">
+              <img
+                src="images/icons/apple-card-logo.png"
+                alt="apple-card-logo"
+              />
             </div>
-          </div>
-
-          <div class="on-card-pharagraph">
-            <div class="apple-card-logo">
-                <img
-                  src="images/icons/apple-card-logo.png"
-                  alt="apple-card-logo"
-                />
-              </div>
-              <div class="card-text">
-                              <div class="retinal-display">
-                Get 3% Daily Cash on purchases from
-              </div>
-              <div class="apple-card">Apple using Apple Card.</div>
+            <div class="card-text">
+                            <div class="retinal-display">
+              Get 3% Daily Cash on purchases from
             </div>
-            <div class="two-links">
-              <div class="card-link">
-                <li><a href="">Learn more ></a></li>
-                <li><a href="">Buy ></a></li>
-              </div>
-            </div>
-              </div>
-          </div>
-        </section>
-        
-
-        <section class="tv-and-airpods-conatiner">
-          <div class="apple-tv-logo">
-            <img src="images/icons/apple-tv-logo.png" alt="apple-tv-logo">
-          </div>
-          <div class="link-on-apple-tv">
-            <a href="">Watch the trailer</a>
-          </div>
-          <div class="tv-and-airpods-image">
-            <img src="images/home/apple-tv-background.jpg" alt="apple-tv-background">
-            <img src="images/home/air-pods.jpg" alt="air-pods">
-          </div>
-          <div class="tv-and-airpods-text">
-            <img src="images/icons/servant-logo.png" alt="servant-logo">
-          </div>
-          <div class="airpods-text">
-            <div>AirPods Pro</div>
-            <div>Magic like you’ve never heard.</div>
+            <div class="apple-card">Apple using Apple Card.</div>
           </div>
           <div class="two-links">
-              <div class="airpods-link">
-                <li><a href="">Learn more ></a></li>
-                <li><a href="">Buy ></a></li>
-              </div>
+            <div class="card-link">
+              <li><a href="">Learn more ></a></li>
+              <li><a href="">Buy ></a></li>
             </div>
-        </section>
-
-
-        <div class="fghjnkmb">
-                <section class="hero-section">
-        <div class="hero-div">
-          <div class="inch-model">16-inch model</div>
-          <div class="macbook">MacBook Pro</div>
-          <div class="brightest">The best for the brightest</div>
-          <ul class="two-links">
-            <li><a href="">Learn more ></a></li>
-            <li><a href="">Buy ></a></li>
-          </ul>
-          <div><img src="images/home/mac-laptop.jpg" alt="apple-laptop" /></div>
+          </div>
+            </div>
         </div>
       </section>
-
-            <section class="hero-section">
-        <div class="hero-div">
-          <div class="inch-model">16-inch model</div>
-          <div class="macbook">MacBook Pro</div>
-          <div class="brightest">The best for the brightest</div>
-          <ul class="two-links">
-            <li><a href="">Learn more ></a></li>
-            <li><a href="">Buy ></a></li>
-          </ul>
-          <div><img src="images/home/mac-laptop.jpg" alt="apple-laptop" /></div>
+        
+      <!--apple tv and airpods section starts here-->
+      <section class="tv-and-airpods-conatiner">
+        <!--apple tv division starts here-->
+        <div class="apple-tv-logo">
+          <img src="images/icons/apple-tv-logo.png" alt="apple-tv-logo">
         </div>
+        <div class="link-on-apple-tv">
+          <a href="">Watch the trailer</a>
+        </div>
+        <div class="tv-and-airpods-image">
+          <img src="images/home/apple-tv-background.jpg" alt="apple-tv-background">
+          <img src="images/home/air-pods.jpg" alt="air-pods">
+        </div>
+        <div class="tv-and-airpods-text">
+          <img src="images/icons/servant-logo.png" alt="servant-logo">
+        </div>
+
+        <!--apple airpods division starts here-->
+        <div class="airpods-text">
+          <div>AirPods Pro</div>
+          <div>Magic like you’ve never heard.</div>
+        </div>
+        <div class="two-links">
+            <div class="airpods-link">
+              <li><a href="">Learn more ></a></li>
+              <li><a href="">Buy ></a></li>
+            </div>
+          </div>
       </section>
+
         </div>
       </section>
     </div>
