refined the iphone 11 pro display section

--- a/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
+++ b/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
@@ -61,7 +61,7 @@
           <img src="images/home/iphone11-pro-bg.jpg" alt="iphone11-pro-bg" />
         </div>
         <div class="fixed-content">
-          <div class="iphone-11">iphone 11 pro</div>
+          <div class="iphone-11">iPhone 11 pro</div>
           <div class="the-pros">Pro cameras. Pro display. Pro performance.</div>
           <div class="currency">From $24.95/mo. or $599 with trade‑in.</div>
           <div class="two-links">
