--- a/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
+++ b/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
@@ -79,7 +79,7 @@
           <img src="images/home/iphone11-bg.jpg" alt="iphone11-bg" />
         </div>
         <div class="second-fixed-container">
-          <div class="iphone-11-2">iphone 11</div>
+          <div class="iphone-11-2">iPhone 11</div>
           <div class="the-right">Just the right amount of everything.</div>
           <div class="currencies">From $16.62/mo. or $399 with trade‑in.</div>
           <div class="two-links">
