--- a/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
+++ b/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div class="outer-wrapper">
+      <!--navigation-->
       <section class="navigation">
         <header class="preheader-wraper">
           <nav class="navigation-links">
@@ -30,6 +31,22 @@
             </ul>
           </nav>
         </header>
+      </section>
+
+      <!--hero-section-->
+      <section class="hero-section">
+        <div class="MacBook-img">
+          <img src="images/home/macbook-pro.jpg" alt="" />
+        </div>
+        <div class="16-inch">16-inch model</div>
+        <div class="MacBook">MacBook Pro</div>
+        <div class="brightest">The best for the brightest.</div>
+        <div>
+          <ul class="more-and-buy-links">
+            <li><a href="#">Learn more ></a></li>
+            <li><a href="#">Buy></a></li>
+          </ul>
+        </div>
       </section>
     </div>
   </body>
