--- a/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
+++ b/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
@@ -41,8 +41,23 @@
         <div class="16-inch">16-inch model</div>
         <div class="MacBook">MacBook Pro</div>
         <div class="brightest">The best for the brightest.</div>
-        <div>
-          <ul class="more-and-buy-links">
+        <div class="more-and-buy-links">
+          <ul>
+            <li><a href="#">Learn more ></a></li>
+            <li><a href="#">Buy></a></li>
+          </ul>
+        </div>
+      </section>
+
+      <!--iphone 11 pro section-->
+      <section class="iphone-11-pro">
+        <div class="iphone-11-pro">iPhone 11 Pro</div>
+        <div class="pro-texts">Pro cameras. Pro display. Pro performance.</div>
+        <div class="iphone-11-currencies">
+          From $24.95/mo. or $599 with trade‑in.
+        </div>
+        <div class="more-and-buy-links">
+          <ul>
             <li><a href="#">Learn more ></a></li>
             <li><a href="#">Buy></a></li>
           </ul>
