added a section for iphone 11 container

--- a/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
+++ b/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
@@ -50,10 +50,10 @@
       </section>
 
       <!--iphone 11 pro section-->
-      <section class="iphone-11-pro">
+      <section class="iphone-11-pro-container">
         <div class="iphone-11-pro">iPhone 11 Pro</div>
         <div class="pro-texts">Pro cameras. Pro display. Pro performance.</div>
-        <div class="iphone-11-currencies">
+        <div class="iphone-11-pro-currencies">
           From $24.95/mo. or $599 with trade‑in.
         </div>
         <div class="more-and-buy-links">
@@ -63,6 +63,24 @@
           </ul>
         </div>
       </section>
+
+      <!--iphone 11 section-->
+      <section class="iphone-11-container">
+        <div class="iphone-11">iPhone 11</div>
+        <div class="right-amount-txt">Just the right amount of everything.</div>
+        <div class="iphone-11-currencies">
+          From $16.62/mo. or $399 with trade‑in.
+        </div>
+        <div class="more-and-buy-links">
+          <ul>
+            <li><a href="#">Learn more ></a></li>
+            <li><a href="#">Buy></a></li>
+          </ul>
+        </div>
+      </section>
+
+      <!--watch and card section-->
+      <section></section>
     </div>
   </body>
 </html>
