--- a/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
+++ b/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
@@ -80,7 +80,45 @@
       </section>
 
       <!--watch and card section-->
-      <section></section>
+      <section class="watch-and-card-section">
+        <!--watch section-->
+        <div class="watch-section">
+          <div class="watch-logo">
+            <img
+              src="images/icons/watch-series5-logo.png"
+              alt="watch-series5-logo"
+            />
+          </div>
+          <div class="retinal-display-text">
+            With the new Always-On Retina display.
+          </div>
+          <div class="never-seen-watch">
+            You’ve never seen a watch like this.
+          </div>
+          <div class="more-and-buy-links">
+            <ul>
+              <li><a href="#">Learn more ></a></li>
+              <li><a href="#">Buy></a></li>
+            </ul>
+          </div>
+        </div>
+
+        <!---card section-->
+        <div class="card-section">
+          <div class="card-logo">
+            <img src="images/icons/apple-card-logo.png" alt="apple-card-logo" />
+          </div>
+          <div class="daily-cash-txt">
+            Get 3% Daily Cash on purchases from <br />Apple using Apple Card.
+          </div>
+          <div class="more-and-buy-links">
+            <ul>
+              <li><a href="#">Learn more ></a></li>
+              <li><a href="#">Buy></a></li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
