added apple tv and airpods section container

--- a/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
+++ b/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
@@ -119,6 +119,36 @@
           </div>
         </div>
       </section>
+
+      <!--tv and airpods section-->
+      <section class="tv-and-airpods-section">
+        <!--tv section-->
+        <div class="tv-section">
+          <div class="tv-logo">
+            <img src="images/icons/apple-tv-logo.png" alt="apple-tv-logo" />
+          </div>
+          <div class="servant-logo">
+            <img src="images/icons/servant-logo.png" alt="servant-logo" />
+          </div>
+          <div class="trailer">
+            <ul>
+              <li><a href="#">Watch the trailer</a></li>
+            </ul>
+          </div>
+        </div>
+
+        <!---airpods section-->
+        <div class="airpods-section">
+          <div class="airpod-title">AirPods Pro</div>
+          <div class="Magic">Magic like you’ve never heard.</div>
+          <div class="more-and-buy-links">
+            <ul>
+              <li><a href="#">Learn more ></a></li>
+              <li><a href="#">Buy></a></li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
