--- a/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
+++ b/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
@@ -36,7 +36,7 @@
       <!--hero-section-->
       <section class="hero-section">
         <div class="MacBook-img">
-          <img src="images/home/macbook-pro.jpg" alt="" />
+          <img src="images/home/macbook-pro.jpg" alt="macbook-pro" />
         </div>
         <div class="16-inch">16-inch model</div>
         <div class="MacBook">MacBook Pro</div>
@@ -147,6 +147,32 @@
               <li><a href="#">Buy></a></li>
             </ul>
           </div>
+        </div>
+      </section>
+
+      <!--section for macBook and iPad-->
+      <section class="macBook-and-ipad-section">
+        <!--macBook section-->
+        <div class="16-inch2">16-inch model</div>
+        <div class="MacBook2">MacBook Pro</div>
+        <div class="brightest2">The best for the brightest.</div>
+        <div class="more-and-buy-links">
+          <ul>
+            <li><a href="#">Learn more ></a></li>
+            <li><a href="#">Buy></a></li>
+          </ul>
+        </div>
+
+        <!---iPad section-->
+        <div class="ipad-img">
+          <img src="images/icons/new-ipad-logo.png" alt="new-ipad-logo" />
+        </div>
+        <div class="ipad-text">Like a computer. Unlike any computer.</div>
+        <div class="more-and-buy-links">
+          <ul>
+            <li><a href="#">Learn more ></a></li>
+            <li><a href="#">Buy></a></li>
+          </ul>
         </div>
       </section>
     </div>
