added a style for navigation links

--- a/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
+++ b/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
@@ -4,13 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Redesign the apple web page</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+
+    <!-- Link to the Font-Awesome Font -->
+    <!-- This font gives us the option to use emojies, symbols, common logos and icons as a font -->
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css"
+    />
+
+    <!-- Link to Montserrat font on Google Fonts-->
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat:200,200i,300,300i,400,600,600i,700,700i,800,800i,900,900i&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="outer-wrapper">
       <!--navigation-->
       <section class="navigation">
         <header class="preheader-wraper">
-          <nav class="navigation-links">
+          <div class="navigation-links">
             <ul>
               <li>
                 <img src="images/icons/logo.png" alt="apple-logo" />
@@ -29,7 +43,7 @@
                 <img src="images/icons/cart.png" alt="" />
               </li>
             </ul>
-          </nav>
+          </div>
         </header>
       </section>
 
@@ -177,7 +191,7 @@
       </section>
 
       <!--footer section-->
-      <section class="footer-section-container">
+      <footer class="footer-section-container">
         <!--footer paragraph-->
         <div class="footer-paragraph">
           1. Trade In: Trade‑in values vary. iPhone 11 and iPhone 11 Pro
@@ -323,7 +337,7 @@
             <div class="footer-country-name">United States</div>
           </div>
         </div>
-      </section>
+      </footer>
     </div>
   </body>
 </html>
