--- a/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
+++ b/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
@@ -49,17 +49,17 @@
 
       <!--hero-section-->
       <section class="hero-section">
-        <div class="MacBook-img">
-          <img src="images/home/macbook-pro.jpg" alt="macbook-pro" />
-        </div>
-        <div class="16-inch">16-inch model</div>
+        <div class="inch">16-inch model</div>
         <div class="MacBook">MacBook Pro</div>
         <div class="brightest">The best for the brightest.</div>
         <div class="more-and-buy-links">
           <ul>
             <li><a href="#">Learn more ></a></li>
-            <li><a href="#">Buy></a></li>
+            <li><a href="#">Buy ></a></li>
           </ul>
+        </div>
+        <div class="MacBook-img">
+          <img src="images/home/macbook-pro.jpg" alt="macbook-pro" />
         </div>
       </section>
 
