--- a/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
+++ b/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
@@ -167,18 +167,21 @@
       <!--section for macBook and iPad-->
       <section class="macBook-and-ipad-section">
         <!--macBook section-->
-        <div class="16-inch2">16-inch model</div>
-        <div class="MacBook2">MacBook Pro</div>
-        <div class="brightest2">The best for the brightest.</div>
-        <div class="more-and-buy-links">
-          <ul>
-            <li><a href="#">Learn more ></a></li>
-            <li><a href="#">Buy></a></li>
-          </ul>
+        <div class="macbook-section">
+          <div class="inch2">16-inch model</div>
+          <div class="MacBook2">MacBook Pro</div>
+          <div class="brightest2">The best for the brightest.</div>
+          <div class="more-and-buy-links">
+            <ul>
+              <li><a href="#">Learn more ></a></li>
+              <li><a href="#">Buy></a></li>
+            </ul>
+          </div>
         </div>
 
         <!---iPad section-->
-        <div class="ipad-img">
+        <div class="ipad-section">
+          <div class="ipad-img">
           <img src="images/icons/new-ipad-logo.png" alt="new-ipad-logo" />
         </div>
         <div class="ipad-text">Like a computer. Unlike any computer.</div>
@@ -189,6 +192,7 @@
           </ul>
         </div>
       </section>
+        </div>
 
       <!--footer section-->
       <footer class="footer-section-container">
