added style for fotter and font family for all the texts

--- a/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
+++ b/Phase 1/Week-4/appleProject/appleHome/sprint1/index.html
@@ -209,11 +209,14 @@
           value of new iPhone. Additional terms from Apple or Apple’s trade-in
           partners may apply. Monthly pricing: Available to qualified customers
           and requires 0% APR, 24‑month installment loan with Citizens One, and
-          iPhone activation with AT&T, Sprint, T‑Mobile, or Verizon.
-          <a href="#">Full terms apply.</a>
+          iPhone activation with AT&T, Sprint, T‑Mobile, or Verizon.<a class="link-in-paragraph" href="#"">Full terms apply.</a></div>
         </div>
+
+        <hr>
+
+        <div class="different-links-list">
         <!--Shop and Learn-->
-        <div class="Shop and Learn">
+        <div class="Shop-and-Learn">
           <h3>Shop and Learn</h3>
           <ul>
             <li><a href="#">Mac</a></li>
@@ -315,6 +318,7 @@
             <li><a href="#">Apple Store App</a></li>
           </ul>
         </div>
+        </div>
 
         <!-- one line text at footer -->
         <div class="more-way-to-shop">
@@ -322,6 +326,7 @@
           <a href="#">other retailer</a> near you. Or call 1-800-MY-APPLE.
         </div>
 
+        <hr>
         <!-- copy rights and terms -->
         <div class="copyright-section">
           <div class="copyright">
