--- a/Phase 1/Week-5/PuppyProjectMediaQueries/Project/myindex.html
+++ b/Phase 1/Week-5/PuppyProjectMediaQueries/Project/myindex.html
@@ -6,5 +6,33 @@
     <link rel="stylesheet" href="CSS/mystyle.css" />
     <title>Responsive Web Design</title>
   </head>
-  <body></body>
+  <body>
+    <!-- header -->
+    <header class="title">
+      <h1>Puppy Lovers Page</h1>
+    </header>
+
+    <!-- banner puppy -->
+    <section class="banner-puppies">
+      <img src="images/banner-puppies.jpg" alt="banner-puppies" />
+    </section>
+
+    <!-- two puppies image -->
+    <section class="two-puppies">
+      <div class="puppy1"></div>
+      <div class="puppy2"></div>
+    </section>
+
+    <!-- more puppies -->
+    <section class="more-puppies">
+      <div class="more-text">More puppies</div>
+      <div class="puppy3"></div>
+      <div class="puppy4"></div>
+    </section>
+
+    <!-- footer -->
+    <section class="footer">
+      <h1>Developed by : Nezira</h1>
+    </section>
+  </body>
 </html>
