--- a/Phase 1/Week-5/PuppyProjectMediaQueries/Project/myindex.html
+++ b/Phase 1/Week-5/PuppyProjectMediaQueries/Project/myindex.html
@@ -4,35 +4,44 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="CSS/mystyle.css" />
-    <title>Responsive Web Design</title>
+    <title>Responsive Puppy Lovers Page</title>
   </head>
   <body>
-    <!-- header -->
     <header class="title">
       <h1>Puppy Lovers Page</h1>
     </header>
 
-    <!-- banner puppy -->
     <section class="banner-puppies">
       <img src="images/banner-puppies.jpg" alt="banner-puppies" />
     </section>
 
-    <!-- two puppies image -->
-    <section class="two-puppies">
-      <div class="puppy1"></div>
-      <div class="puppy2"></div>
+    <section class="container">
+      <div class="three-puppies">
+        <div class="puppy-1"></div>
+
+        <div class="missing-puppy">
+          <p>Puppy missing here!!</p>
+        </div>
+
+        <div class="puppy-2"></div>
+      </div>
     </section>
 
-    <!-- more puppies -->
-    <section class="more-puppies">
-      <div class="more-text">More puppies</div>
-      <div class="puppy3"></div>
-      <div class="puppy4"></div>
+    <section class="second-container">
+      <div class="more-puppies">
+        <div class="more-puppies-pharagrapgh">
+          <p>More Puppies</p>
+        </div>
+      </div>
+
+      <section class="two-puppies">
+        <div class="puppy-3"></div>
+        <div class="puppy-4"></div>
+      </section>
     </section>
 
-    <!-- footer -->
     <section class="footer">
-      <h1>Developed by : Nezira</h1>
+      <h1>Developed by Nezira</h1>
     </section>
   </body>
 </html>
