--- a/Phase 1/Week-5/PuppyProjectMediaQueries/Project/myindex.html
+++ b/Phase 1/Week-5/PuppyProjectMediaQueries/Project/myindex.html
@@ -17,13 +17,17 @@
 
     <section class="container">
       <div class="three-puppies">
-        <div class="puppy-1"></div>
+        <div class="puppy-1">
+          <img src="images/puppy-1.jpg" alt="puppy-1" />
+        </div>
 
         <div class="missing-puppy">
           <p>Puppy missing here!!</p>
         </div>
 
-        <div class="puppy-2"></div>
+        <div class="puppy-2">
+          <img src="images/puppy-2.jpg" alt="puppy-2" />
+        </div>
       </div>
     </section>
 
@@ -35,8 +39,12 @@
       </div>
 
       <section class="two-puppies">
-        <div class="puppy-3"></div>
-        <div class="puppy-4"></div>
+        <div class="puppy-3">
+          <img src="images/puppy-3.jpg" alt="puppy-3" />
+        </div>
+        <div class="puppy-4">
+          <img src="images/puppy-4.jpg" alt="puppy-4" />
+        </div>
       </section>
     </section>
 
