refined week 4 folder structure to be the same with other weeks

--- a/Phase 1/Week-4/appleProject/Project/index.html
+++ b/Phase 1/Week-4/appleProject/Project/index.html
@@ -64,7 +64,7 @@
       </section>
 
       <!--iphone 11 pro section-->
-      <section class="iphone-11-pro-container">
+      <section class="iphone-11-pro-container heigt-and-center">
         <div class="iphone-11-pro">iPhone 11 Pro</div>
         <div class="pro-texts">Pro cameras. Pro display. Pro performance.</div>
         <div class="iphone-11-pro-currencies">
@@ -73,13 +73,13 @@
         <div class="more-and-buy-links">
           <ul>
             <li><a href="#">Learn more ></a></li>
-            <li><a href="#">Buy></a></li>
+            <li><a href="#">Buy ></a></li>
           </ul>
         </div>
       </section>
 
       <!--iphone 11 section-->
-      <section class="iphone-11-container">
+      <section class="iphone-11-container heigt-and-center">
         <div class="iphone-11">iPhone 11</div>
         <div class="right-amount-txt">Just the right amount of everything.</div>
         <div class="iphone-11-currencies">
@@ -94,9 +94,9 @@
       </section>
 
       <!--watch and card section-->
-      <section class="watch-and-card-section">
+      <section class="watch-and-card-section ">
         <!--watch section-->
-        <div class="watch-section">
+        <div class="watch-section heigt-and-center">
           <div class="watch-logo">
             <img
               src="images/icons/watch-series5-logo.png"
@@ -118,7 +118,7 @@
         </div>
 
         <!---card section-->
-        <div class="card-section">
+        <div class="card-section heigt-and-center">
           <div class="card-logo">
             <img src="images/icons/apple-card-logo.png" alt="apple-card-logo" />
           </div>
@@ -135,9 +135,9 @@
       </section>
 
       <!--tv and airpods section-->
-      <section class="tv-and-airpods-section">
+      <section class="tv-and-airpods-section ">
         <!--tv section-->
-        <div class="tv-section">
+        <div class="tv-section heigt-and-center">
           <div class="tv-logo">
             <img src="images/icons/apple-tv-logo.png" alt="apple-tv-logo" />
           </div>
@@ -152,7 +152,7 @@
         </div>
 
         <!---airpods section-->
-        <div class="airpods-section">
+        <div class="airpods-section heigt-and-center">
           <div class="airpod-title">AirPods Pro</div>
           <div class="Magic">Magic like you’ve never heard.</div>
           <div class="more-and-buy-links">
@@ -165,7 +165,7 @@
       </section>
 
       <!--section for macBook and iPad-->
-      <section class="macBook-and-ipad-section">
+      <section class="macBook-and-ipad-section heigt-and-center">
         <!--macBook section-->
         <div class="macbook-section">
           <div class="inch2">16-inch model</div>
@@ -180,7 +180,7 @@
         </div>
 
         <!---iPad section-->
-        <div class="ipad-section">
+        <div class="ipad-section heigt-and-center">
           <div class="ipad-img">
           <img src="images/icons/new-ipad-logo.png" alt="new-ipad-logo" />
         </div>
