refines style to reduce redendency

--- a/Phase 1/Week-4/appleProject/Project/index.html
+++ b/Phase 1/Week-4/appleProject/Project/index.html
@@ -217,8 +217,8 @@
         <div class="different-links-list">
         <!--Shop and Learn-->
         <div class="Shop-and-Learn">
-          <h3>Shop and Learn</h3>
-          <ul>
+          <h3 class="footer-bold-titles">Shop and Learn</h3>
+          <ul class="footer-list">
             <li><a href="#">Mac</a></li>
             <li><a href="#">iPad</a></li>
             <li><a href="#">iPhone</a></li>
@@ -234,8 +234,8 @@
         </div>
         <!--services-->
         <div class="Services">
-          <h3>Services</h3>
-          <ul>
+          <h3 class="footer-bold-titles">Services</h3>
+          <ul class="footer-list">
             <li><a href="#">Apple Music</a></li>
             <li><a href="#">Apple News+</a></li>
             <li><a href="#">Apple TV+</a></li>
@@ -243,8 +243,8 @@
             <li><a href="#">Apple Card</a></li>
             <li><a href="#">iCloud</a></li>
           </ul>
-          <h3>Account</h3>
-          <ul>
+          <h3 class="footer-bold-titles">Account</h3>
+          <ul class="footer-list">
             <li><a href="#">Manage Your Apple ID</a></li>
             <li><a href="#">Apple Store Account</a></li>
             <li><a href="#">iCloud.com</a></li>
@@ -252,8 +252,8 @@
         </div>
         <!--Apple Store-->
         <div class="apple-store">
-          <h3>Apple Store</h3>
-          <ul>
+          <h3 class="footer-bold-titles">Apple Store</h3>
+          <ul class="footer-list">
             <li><a href="#">Find a Store</a></li>
             <li><a href="#">Genius Bar</a></li>
             <li><a href="#">Today at Apple</a></li>
@@ -270,27 +270,27 @@
         <!--business-education-healthcare and government links-->
         <div class="Business">
           <!-- business -->
-          <h3>For Business</h3>
-          <ul>
+          <h3 class="footer-bold-titles">For Business</h3>
+          <ul class="footer-list">
             <li><a href="#">Apple and Business</a></li>
             <li><a href="#">Shop for Business</a></li>
           </ul>
           <!-- education -->
-          <h3>For Education</h3>
-          <ul>
+          <h3 class="footer-bold-titles">For Education</h3>
+          <ul class="footer-list">
             <li><a href="#">Apple and Education</a></li>
             <li><a href="#">Shop for College</a></li>
           </ul>
           <!-- healthcare -->
-          <h3>For Healthcare</h3>
-          <ul>
+          <h3 class="footer-bold-titles">For Healthcare</h3>
+          <ul class="footer-list">
             <li><a href="#">Manage Your Apple ID</a></li>
             <li><a href="#">Apple Store Account</a></li>
             <li><a href="#">iCloud.com</a></li>
           </ul>
           <!-- government -->
-          <h3>For Government</h3>
-          <ul>
+          <h3 class="footer-bold-titles">For Government</h3>
+          <ul class="footer-list">
             <li><a href="#">Apple and Education</a></li>
             <li><a href="#">Shop for College</a></li>
           </ul>
@@ -298,8 +298,8 @@
         <!-- values and about -->
         <div class="values">
           <!-- values -->
-          <h3>Apple Values</h3>
-          <ul>
+          <h3 class="footer-bold-titles">Apple Values</h3>
+          <ul class="footer-list">
             <li><a href="#">Find a Store</a></li>
             <li><a href="#">Genius Bar</a></li>
             <li><a href="#">Today at Apple</a></li>
@@ -308,8 +308,8 @@
             <li><a href="#">Apple Store App</a></li>
           </ul>
           <!-- about -->
-          <h3>About Apple</h3>
-          <ul>
+          <h3 class="footer-bold-titles">About Apple</h3>
+          <ul class="footer-list">
             <li><a href="#">Find a Store</a></li>
             <li><a href="#">Genius Bar</a></li>
             <li><a href="#">Today at Apple</a></li>
@@ -333,7 +333,7 @@
             Copyright &copy; 2019 Apple Inc. All rights reserved.
           </div>
           <div class="footer-links-terms">
-            <ul>
+            <ul class="footer-list">
               <li><a href="#">Privacy Policy</a></li>
               <li><a href="#">Terms of Use</a></li>
               <li><a href="#">Sales and Refunds</a></li>
